Task 4: Tasklist Authentication

--- a/app/tasklist.html
+++ b/app/tasklist.html
@@ -8,16 +8,20 @@
 </body>
 
 <template name="tasks">
+  {{> loginButtons}}
   <h1>Add Task</h1>
-  <form class="add-task">
-    <label>Task Name</label>
-    <input type="text" name="name" placeholder="Add Task" />
-    <input type="submit" value="Submit" />
-  </form>
-
+  {{#if currentUser}}
+    <form class="add-task">
+      <label>Task Name</label>
+      <input type="text" name="name" placeholder="Add Task"/>
+      <input type="submit" value="Submit"/>
+    </form>
+  {{else}}
+    <p>please log in to add tasks</p>
+  {{/if}}
   <ul>
     {{#each tasks}}
-    <li>{{name}} <a href="#" class="delete-task">X</a></li>
+    <li>{{name}} {{#if currentUser}}<a href="#" class="delete-task">X</a>{{/if}}</li>
     {{/each}}
   </ul>
 </template>
